src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__task_sidebar__tests__snapshot_collapsed_tree.snap
---
source: src/tui/widgets/task_sidebar.rs
expression: snap(&buffer)
---
 Tasks                            ▐
                                  ▐
                                  ▐
  ▶ Epic One [parser]             ▐
  ▶ Epic Two [dag]                ▐
                                  ▐
                                  ▐
 1/4 25%                          ▐
