src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__task_sidebar__tests__snapshot_empty_tasks.snap
---
source: src/tui/widgets/task_sidebar.rs
expression: snap(&buffer)
---
 Tasks                       ▐
                             ▐
                             ▐
                             ▐
                             ▐
 0/0 0%                      ▐
