src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__task_sidebar__tests__snapshot_expanded_tree.snap
---
source: src/tui/widgets/task_sidebar.rs
expression: snap(&buffer)
---
 Tasks                                      ▐
                                            ▐
                                            ▐
  ▼ Epic One [parser]                       ▐
    ✓ Subtask A [parser]                    ▐
    ~ Subtask B [parser] →1.1               ▐
  ▼ Epic Two [dag]                          ▐
    ○ Cycle detect [dag]                    ▐
    ! Topo sort [dag] →2.1 →1.2             ▐
                                            ▐
                                            ▐
 1/4 25%                                    ▐
