src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__task_sidebar__tests__snapshot_with_current_task_highlight.snap
---
source: src/tui/widgets/task_sidebar.rs
expression: snap(&buffer)
---
 Tasks                                 ▐
                                       ▐
                                       ▐
  ▼ Epic One [parser]                  ▐
    ✓ Subtask A [parser]               ▐
                                       ▐
                                       ▐
 1/4 25%                               ▐
