src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__task_sidebar__tests__snapshot_with_selection.snap
---
source: src/tui/widgets/task_sidebar.rs
expression: snap(&buffer)
---
 Tasks                                 ▐
                                       ▐
                                       ▐
    ✓ Subtask A [parser]               ▐
    ~ Subtask B [parser] →1.1          ▐
                                       ▐
                                       ▐
 1/4 25%                               ▐
